Incorrect rendering with one-sided thick border and border-radius https://bugs.webkit.org/show_bug.cgi?id=38787

Patch by Ben Wells <benwells@chromium.org> on 2011-10-12
Reviewed by Simon Fraser.

Source/WebCore:

Incorrect rendering resulted when the inner border could not be properly represented as a rounded
rectangle. When this happens, and the inner border is clipped out, the clipping code clips out the
enclosing rectangle instead.

This change addresses this by clipping in a different way in this case only. The inside is clipped
out one side at a time with a rounded rect created by adjusting the unrenderable inner border
rounded rectangle. The side polygon which is clipped to is also increased in this case to include
the inside of the border so that no areas are missing.

Test: fast/borders/border-radius-complex-inner.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintOneBorderSide):
(WebCore::RenderBoxModelObject::paintBorder):
(WebCore::calculateSideRectIncludingInner):
(WebCore::calculateAdjustedInnerBorder):
(WebCore::RenderBoxModelObject::clipBorderSideForComplexInnerPath):
* rendering/RenderBoxModelObject.h:

LayoutTests:

* fast/borders/border-radius-complex-inner.html: Added.
* platform/chromium-linux/fast/borders/border-radius-complex-inner-expected.png: Added.
* platform/chromium-linux/fast/borders/border-radius-different-width-001-expected.png:
* platform/chromium-linux/fast/borders/mixed-border-styles-radius-expected.png:
* platform/chromium/test_expectations.txt:
* platform/mac/fast/borders/border-radius-complex-inner-expected.txt: Added.

Canonical link: https://commits.webkit.org/86049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97318 268f45cc-cd09-0410-ab3c-d52691b4dbfc